# AAMS

./: CITATION.cff  CODE_OF_CONDUCT.md  README.md  RELEASE.md  TODO.md  coapResponse.csv  data2.csv  modCOAP.csv
Code/Core/Login/: Login  Login.cpp  Login.h  log.json  login  test  test.cpp
Code/Core/Project/: Project  Project.cpp  Project.h
Code/Core/Rule/: Rule.cpp  Rule.h  RuleInterface.cpp  RuleInterface.h
Code/Core/SeatMatrix/: SeatMatrix  SeatMatrix.cpp  SeatMatrix.h
Code/Core/User/: User.cpp  User.h
Code/Meta/: Meta.h  SystemHandler.h
Code/Testing/: README.md
Code/Testing/Unit_tests/Login/: test1.cpp
Code/Testing/Unit_tests/Project/: test1.cpp
Code/Testing/Unit_tests/SeatMatrix/: test1.cpp
Code/UI/: init
Code/UI/TestUI/: Application.cpp  Application.h  CMakeLists.txt  Login.cpp  Login.h  UIHandler.cpp  UIHandler.h  UIInterface.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  projectview.cpp  projectview.h  projectview.ui  sortrules.cpp  sortrules.h  sortrules.ui
Documentation/: README.md
Documentation/SDA/: README.md
Documentation/SDA/LaTeX/: SD.tex  frontpage.tex
Documentation/SRS/: README.md
Documentation/SRS/LaTex/: SRS.tex  frontpage.tex
Login/: Login.h  login
docs/User Manual/: init
